samples/_failures_safe/1761262433_812930_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f9743030.c: In function ‘main’:
./samples/SAFE/__tmp_f9743030.c:159:5: error: ‘print_’ undeclared (first use in this function); did you mean ‘printf’?
  159 |     print_
      |     ^~~~~~
      |     printf
./samples/SAFE/__tmp_f9743030.c:159:5: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_f9743030.c:159:11: error: expected ‘;’ at end of input
  159 |     print_
      |           ^
      |           ;
./samples/SAFE/__tmp_f9743030.c:159:5: error: expected declaration or statement at end of input
  159 |     print_
      |     ^~~~~~
